--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Jogo da Velha</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Jogo da Velha</h1>
@@ -46,6 +46,6 @@
         <p>fjhhfj</p>
     </div>
     
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
